styles.css
body {
  background-color: white;
}

div.head {
  text-align: center;
  color: black;
}


.button {
  background-color: gold;
  border: none;
  color: blue;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

